--- a/docker-compose-dev-hot.yml
+++ b/docker-compose-dev-hot.yml
@@ -1,14 +1,13 @@
 version: "3.0"
-services:  
- dev:
-    image: dwaynausar/inq-dev 
+services:
+  dev:
+    image: codesmithinq/dev
     container_name: inq-dev-hot
-    ports: 
-        - 8080:8080
-    volumes: 
-        - .:/app
-        - node_modules:/app/node_modules
+    ports:
+      - 8080:8080
+    volumes:
+      - .:/app
+      - node_modules:/app/node_modules
     command: npm run dev
-volumes: 
- node_modules:
-        
+volumes:
+  node_modules:
